@@ -26,6 +26,8 @@ use Test::More tests => 68;
 use Win32::WinError qw(ERROR_ACCESS_DENIED ERROR_FILE_EXISTS
                        ERROR_FILE_NOT_FOUND);
 
+## no critic (Subroutines::ProhibitSubroutinePrototypes)
+
 sub new_filename();
 
 #===============================================================================
